# Enterprise_RAG

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  test_rag.py
app/core/: config.py  logger.py
app/frontend/: streamlit_app.py
app/generation/: context_builder.py  llm.py  prompt.py
app/ingestion/: chunker.py  navigation_detector.py  run_ingestion.py  sec_grammar.py  sec_loader.py
app/retrieval/: retriever.py  test_retrieval.py  test_retriever.py  vector_store.py
app/static/: style.css
app/templates/: index.html
data/vectorstore/: index.faiss  index.pkl
